Fix pre and the error dialog in LFA dark mode

--- a/More/Logfile Analyzer.css
+++ b/More/Logfile Analyzer.css
@@ -6,6 +6,8 @@
     --selected: #ddd;
     --bullet: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><circle cx=".5" cy=".5" r=".25" fill="%23000" /></svg>');
     --expandable: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><path d="M0,0 1,.5 0,1z" fill="%23000" /></svg>');
+    --pre: #f8f8f8;
+    --error-background: rgba(255, 255, 255, 0.5);
 }
 
 /* Dark mode */
@@ -17,6 +19,8 @@
     --selected: rgb(60, 60, 60);
     --bullet: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><circle cx=".5" cy=".5" r=".25" fill="%23dcdcdc" /></svg>');
     --expandable: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><path d="M0,0 1,.5 0,1z" fill="%23dcdcdc" /></svg>');
+    --pre: rgb(35, 35, 35);
+    --error-background: rgba(50, 50, 50, 0.5);
 }
 
 :root.dark-mode a:link:not(.button) {
@@ -70,7 +74,7 @@ table.standard th {
     align-items: center;
     font-size: 200%;
 
-    background: rgba(255, 255, 255, 0.5);
+    background: var(--error-background);
 
     position: fixed;
     top: 0px;
@@ -83,8 +87,8 @@ table.standard th {
 }
 
 .javascript-error div {
-    background: white;
-    box-shadow: 0px 0px 25px 25px white;
+    background: var(--background);
+    box-shadow: 0px 0px 25px 25px var(--background);
 }
 
 @keyframes fade-in {
@@ -914,7 +918,7 @@ table.standard th {
         }
 
 .module-info pre {
-    background: #f8f8f8;
+    background: var(--pre);
     border: 1px solid #ddd;
     margin: .3em .6em;
     padding: .5em .7em;
